# quic-sni-router

./: .clang-format  .clang-tidy  .clangd  .dockerignore  .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  Makefile  NOTICE  README.md  ROADMAP.md
.dev/: compose.yml
.dev/backend/: Dockerfile  udp-echo.sh
.dev/config/: router.yaml
.devcontainer/: Dockerfile  devcontainer.json  startup.sh
.github/actions/setup-deps/: action.yml
.github/workflows/: ci.yaml  helm.yaml  image.yaml
charts/quic-sni-router/: .helmignore  Chart.yaml  README.md  values.schema.json  values.yaml
charts/quic-sni-router/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  networkpolicy.yaml  poddisruptionbudget.yaml  service.yaml  serviceaccount.yaml
docker/: Dockerfile
docs/: benchmarks.md  examples.md  inspirations.md  protocol-notes.md  threat-model.md
examples/mtls-backends/: README.md  compose.yml  generate-certs.sh  router.yaml
examples/mtls-backends/caddy/: rvr-a.Caddyfile  rvr-b.Caddyfile
include/qsr/: common.h  config.h  hash.h  metrics.h  quic_crypto.h  quic_frames.h  quic_initial.h  route_table.h  runtime.h  session_table.h  tls_client_hello.h  udp.h
src/: config.c  hash.c  main.c  metrics.c  quic_crypto.c  quic_frames.c  quic_initial.c  route_table.c  runtime.c  session_table.c  tls_client_hello.c  udp.c
tests/bench/: bench_dataplane.c
tests/e2e/fragmented/: router.yaml  run.sh
tests/e2e/http3/: Dockerfile  compose.yml  fragmented_initial_client.py  http3_backend.py  http3_client.py  idle_client.py  marker_backend.py  reverse_tuple_client.py  router.yaml  run.sh
tests/e2e/idle/: router.yaml  run.sh
tests/e2e/loadtest/: loadtest_client.py  persistent_loadtest_client.py  run.sh
tests/e2e/reload/: initial.yaml  reload_client.py  run.sh  updated.yaml
tests/e2e/reverse/: router.yaml  run.sh
tests/fuzz/: fuzz_quic_frames.c  fuzz_quic_initial.c  fuzz_tls_client_hello.c
tests/integration/: README.md
tests/unit/: test_config.c  test_hash.c  test_main.h  test_quic_crypto.c  test_quic_frames.c  test_quic_initial.c  test_route_table.c  test_session_table.c  test_tls_client_hello.c
